--- a/aboutme.html
+++ b/aboutme.html
@@ -160,7 +160,7 @@
       <!-- Image area -->
       <div class="top-image">
         <!-- Replace '1.jpg' with your actual image path -->
-        <img src="3.JPG" alt="Profile Picture">
+        <img src="3.jpg" alt="Profile Picture">
       </div>
     </div>
   </section>
