--- a/aboutme.html
+++ b/aboutme.html
@@ -142,8 +142,8 @@
           <img src="2.jpg" alt="About Image">
         </div>
         <div class="about-title">
-            <h1>Hi, I am Deepak.</h1>
-        <p>I'm a second-year game development student at VIT, skilled in C++, C#, and Python. I participate in hackathons and gaming tournaments, aspiring to create immersive gaming experiences. I'm committed to lifelong learning in the latest game development trends.
+            <h1>Hi, I am R. Karthik.</h1>
+        <p>I am a BTech student in CSE Core at VIT Vellore. Passionate about data mining and blockchain, I enjoy exploring innovative solutions in these fields. I strive to enhance my technical skills and work on impactful projects that leverage data and secure technologies.
         </p>
         </div>
       </div>
