--- a/aboutme.html
+++ b/aboutme.html
@@ -153,8 +153,8 @@
     <div class="container top-container">
       <!-- Text area -->
       <div class="top-title">
-       <h1>Hi, I am Deepak.</h1>
-        <p>I'm a second-year game development student at VIT, skilled in C++, C#, and Python. I participate in hackathons and gaming tournaments, aspiring to create immersive gaming experiences. I'm committed to lifelong learning in the latest game development trends.
+       <h1>Hi, I am Valli Shanmukha Sai</h1>
+        <p>II'm a B.Tech student at VIT Vellore pursuing Computer Science and Engineering. I'm passionate about programming in C, Java, Python, and web development. I'm also an avid badminton player."
         </p>
       </div>
       <!-- Image area -->
