--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
   <nav>
     <ul class="menu">
       <li><a href="mess.html"><i class="fas fa-home"></i> Home</a></li>
-      <li><a href="aboutme.html"><i class="fas fa-info-circle"></i> About</a></li>
+      <li><a href="aboutmev.html"><i class="fas fa-info-circle"></i> About</a></li>
       <li><a href="#services"><i class="fas fa-concierge-bell"></i> Services</a></li>
       <li><a href="#contact"><i class="fas fa-envelope"></i> Contact</a></li>
     </ul>
