--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
   <!-- Top Navigation Menu -->
   <nav>
     <ul class="menu">
-      <li><a href="mess.html"><i class="fas fa-home"></i> Home</a></li>
+      <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
       <li><a href="aboutmev.html"><i class="fas fa-info-circle"></i> About</a></li>
       <li><a href="#services"><i class="fas fa-concierge-bell"></i> Services</a></li>
       <li><a href="#contact"><i class="fas fa-envelope"></i> Contact</a></li>
