--- a/Privacy.html
+++ b/Privacy.html
@@ -118,10 +118,10 @@
     <footer>
       <p>&copy; 2025 Mess Menu Formation System. All Rights Reserved.</p>
       <div>
-        <a href="privacy.html">Privacy</a> | 
-        <a href="terms.html">Terms</a> | 
-        <a href="support.html">Support</a> | 
-        <a href="feedback.html">Feedback</a>
+        <a href="Privacy.html">Privacy</a> | 
+        <a href="Terms.html">Terms</a> | 
+        <a href="Support.html">Support</a> | 
+        <a href="Feedback.html">Feedback</a>
       </div>
     </footer>
   </div>
