--- a/Terms.html
+++ b/Terms.html
@@ -84,7 +84,7 @@
     <!-- Navigation -->
     <nav>
       <ul class="menu">
-        <li><a href="mess.html"><i class="fas fa-home"></i> Home</a></li>
+        <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
         <li><a href="about.html"><i class="fas fa-info-circle"></i> About</a></li>
         <li><a href="services.html"><i class="fas fa-concierge-bell"></i> Services</a></li>
         <li><a href="contact.html"><i class="fas fa-envelope"></i> Contact</a></li>
