--- a/Feedback.html
+++ b/Feedback.html
@@ -99,12 +99,10 @@
     <!-- Navigation -->
     <nav>
       <ul class="menu">
-        <li><a href="mess.html"><i class="fas fa-home"></i> Home</a></li>
+        <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
         <li><a href="about.html"><i class="fas fa-info-circle"></i> About</a></li>
         <li><a href="services.html"><i class="fas fa-concierge-bell"></i> Services</a></li>
         <li><a href="contact.html"><i class="fas fa-envelope"></i> Contact</a></li>
-        <li><a href="support.html"><i class="fas fa-life-ring"></i> Support</a></li>
-        <li><a href="feedback.html"><i class="fas fa-comment"></i> Feedback</a></li>
       </ul>
     </nav>
     
