--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Student Details Entry</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-  <!-- Bootstrap CSS (v4.5.2) -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
-  <!-- Font Awesome for icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -101,17 +99,13 @@
 
   <footer class="text-center">
     <ul class="footer-links">
-      <li><a href="#">Privacy</a></li>
-      <li><a href="#">Terms</a></li>
-      <li><a href="#">Support</a></li>
-      <li><a href="#">FAQ</a></li>
+      <li><a href="Privacy.html">Privacy</a></li>
+      <li><a href="Terms.html">Terms</a></li>
+      <li><a href="Support.html">Support</a></li>
     </ul>
   </footer>
-  <!-- Bootstrap JS and jQuery -->
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
-
-  <!-- External Script -->
   <script src="script.js"></script>
 </body>
 </html>
