--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
   <header>
     <ul class="menu">
-      <li><a href= studentdetails.html><i class="fas fa-home"></i> Home</a></li>
+      <li><a href= "index.html"><i class="fas fa-home"></i> Home</a></li>
       <li><a href="about.html"><i class="fas fa-info-circle"></i> About</a></li>
       <li><a href="service.html"><i class="fas fa-concierge-bell"></i> Services</a></li>
-      <li><a href="login.html"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
+      <li><a href="index.html"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
     </ul>
   </header>
   <body class="bg-step1">
