--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Snippet with Continuation</title>
+  <title>ABOUT</title>
   <style>
     :root {
       --font: 'Poppins', sans-serif;
