--- a/service.html
+++ b/service.html
@@ -55,7 +55,7 @@
       <p><strong>Support Emails:</strong></p>
       <ul class="email-list">
         <li>karthikratnala45@gmail.com</li>
-        <li>pranameshkotipalli@gmail.com</li>
+        <li>pranamesh67@gmail.com</li>
         <li>shanmukhvalli@gmail.com</li>
       </ul>
     </div>
